--- a/e-commerce/src/components/Header/Header.css
+++ b/e-commerce/src/components/Header/Header.css
@@ -3,14 +3,14 @@
     margin-top: 40px;
     height: 150px;
     display: flex;
-    justify-content: flex-end;
     background-color: #6E059D;
-    position: relative;
 }
 
+.header h1 {
+
+}
+
+
 .header img{
-    width: 70%;
-    border-radius: 8px;
-    object-fit: cover;
-    position: relative;
+    width: 60%;
 }
